fix: fix layout shifts due to scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -122,6 +122,9 @@
   body {
     @apply bg-background text-foreground;
   }
+  html {
+  scrollbar-gutter: stable;
+}
 }
 
 @utility container {
